GNOME Bugzilla – Bug 733362
validate: duplicate strings in gst_validate_issue_new()
Last modified: 2014-09-26 08:14:05 UTC
When compiling validate tools with -Wwrite-strings -Werror, I have: gst-devtools/validate/gst/validate/gst-validate-report.c:65:1: note: expected 'gchar *' but argument is of type const char *' gst-devtools/validate/gst/validate/gst-validate-report.c:182:3: error: passing argument 2 of 'gst_validate_issue_new' discards 'const' qualifier from pointer target type [-Werror] due to the fact that gst_validate_issue_new() discard 'const' qualifier and we use it with constant strings. Also it will cause some issue with the free method.
Created attachment 281102 [details] [review] validate: duplicate strings in gst_validate_issue_new() Duplicate strings in new method() No change in free method since it already free these strings.
Thanks for the patch. The issue about freeing const string was never noticed because we do not have a deinit function yes. Attachment 281102 [details] pushed as d1c261f - validate: duplicate strings in gst_validate_issue_new()